# HGF-PnL

./: .gitignore  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: hgf-pnl-bootstrap.md
docs/: consolidated_writer.md  priority_file_exploration.md
hgf_pnl/extractors/: br_info.py  chargeback_pdf.py  payroll_journal.py
hgf_pnl/pipeline/: __init__.py  manifest.py
scripts/: discover_package.py  extract_addbacks_gl.py  extract_br_info.py  extract_chargeback_pdf.py  extract_division_cogs.py  extract_payroll_journal.py  extract_pl_by_dept.py
skills/goodbye/: SKILL.md
skills/hello/: SKILL.md
skills/hgf-monthly-close/: SKILL.md
skills/hgf-monthly-close/docs/: consolidated_writer.md  extractors.md  hgf_close_adjustments_playbook.md  hgf_close_mapping_rules.md  pipeline.md  tab_completion.md
skills/hgf-monthly-close/hgf_pnl/: __init__.py  formulas.py
skills/hgf-monthly-close/scripts/: build_values.py  explore_excel.py  extract_chargeback_pdf.py  extract_monthly_revenue.py  extract_th_revenue.py  patch_template.py  profile_chargeback_pdf.py  repair_xlsx.py  (+2 more)
tests/: test_addbacks_gl_extractor.py  test_br_info_extractor.py  test_chargeback_pdf_extractor.py  test_close_phases.py  test_close_values_builder.py  test_consolidated_pnl_writer.py  test_division_cogs_extractor.py  test_formulas.py  test_monthly_revenue_extractor.py  test_package_discovery_manifest.py  test_payroll_journal_extractor.py  test_pl_by_dept_extractor.py  test_template_patch_and_repair.py  test_th_revenue_extractor.py
(+14 files in other folders)
